application/nordmart/cart.yaml
---
# Source: application/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  labels:
    app: cart
  name: cart
spec:
  selector:
    app: cart
  ports:
    - name: https
      port: 8080
      targetPort: 8080
    
---
# Source: application/templates/deployment.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: NAMESPACE
  labels:
    app: cart
  name: cart
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: "stakater/stakater-nordmart-cart:v0.0.1"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          
      serviceAccountName: default
