application/nordmart/inventory.yaml
---
# Source: application/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  labels:
    app: inventory
  name: inventory
spec:
  selector:
    app: inventory
  ports:
    - name: https
      port: 8080
      targetPort: 8080

---
# Source: application/templates/deployment.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: NAMESPACE
  labels:
    app: inventory
  name: inventory
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
    spec:      
      imagePullSecrets:
      - name: docker-registry-nexus-secret
      containers:
      - name: inventory
        image: "stakater/stakater-nordmart-inventory:v0.0.1"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthCheck
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthCheck
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1

      serviceAccountName: default
