application/nordmart/web.yaml
---
# Source: application/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  labels:
    app: web
  name: web
spec:
  selector:
    app: web
  ports:
    - name: web
      port: 4200
      protocol: TCP
      targetPort: 4200
    
---
# Source: application/templates/deployment.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: NAMESPACE
  labels:
    app: web    
  name: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: "stakater/stakater-nordmart-web:v0.0.1"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 4200
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 4200
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        
      serviceAccountName: default
