application/nordmart/route-gateway.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-gateway
  namespace: NAMESPACE
spec:
  host: gateway-NAMESPACE.cp-stakater.com
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - host: gateway-NAMESPACE.cp-stakater.com
      routerName: router
      wildcardPolicy: None
